--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-email-validator": "^1.0.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.0",
     "sass-loader": "^10.1.1",
